--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ host_key_checking = False
 fact_caching = jsonfile
 fact_caching_connection = /tmp/facts_cache
 roles_path = roles
+remote_tmp = /tmp/
 
 [ssh_connection]
 pipelining = True
