--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -71,7 +71,7 @@
   ansible.builtin.package:
     name: "{{ docker_packages }}"
     state: "{{ docker_packages_state }}"
-  notify: restart docker
+  notify: Restart docker
   ignore_errors: "{{ ansible_check_mode }}"
   when: "ansible_version.full is version_compare('2.12', '<') or ansible_os_family not in ['RedHat', 'Debian']"
 
@@ -80,7 +80,7 @@
     name: "{{ docker_packages }}"
     state: "{{ docker_packages_state }}"
     allow_downgrade: true
-  notify: restart docker
+  notify: Restart docker
   ignore_errors: "{{ ansible_check_mode }}"
   when: "ansible_version.full is version_compare('2.12', '>=') and ansible_os_family in ['RedHat', 'Debian']"
 
@@ -88,7 +88,7 @@
 #   ansible.builtin.package:
 #     name: "{{ docker_compose_package }}"
 #     state: "{{ docker_compose_package_state }}"
-#   notify: restart docker
+#   notify: Restart docker
 #   ignore_errors: "{{ ansible_check_mode }}"
 #   when: "docker_install_compose_plugin | bool == true and (ansible_version.full is version_compare('2.12', '<') or ansible_os_family not in ['RedHat', 'Debian'])"
 #
@@ -97,7 +97,7 @@
     name: "{{ docker_compose_package }}"
     state: "{{ docker_compose_package_state }}"
     allow_downgrade: true
-  notify: restart docker
+  notify: Restart docker
   ignore_errors: "{{ ansible_check_mode }}"
   # when: "docker_install_compose_plugin | bool == true and ansible_version.full is version_compare('2.12', '>=') and ansible_os_family in ['RedHat', 'Debian']"
 
@@ -114,7 +114,7 @@
     dest: /etc/docker/daemon.json
     mode: "0644"
   when: docker_daemon_options.keys() | length > 0
-  notify: restart docker
+  notify: Restart docker
 
 - name: Ensure Docker is started and enabled at boot.
   ansible.builtin.service:
