--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,36 @@
 ansible==11.3.0
+ansible-compat==25.1.4
 ansible-core==2.18.3
+ansible-lint==25.1.3
+attrs==25.3.0
+black==25.1.0
+bracex==2.5.post1
 cffi==1.17.1
+cfgv==3.4.0
+click==8.1.8
 cryptography==44.0.2
+distlib==0.3.9
+filelock==3.18.0
+identify==2.6.9
+importlib_metadata==8.6.1
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 MarkupSafe==3.0.2
+mypy-extensions==1.0.0
+nodeenv==1.9.1
 packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
+pre_commit==4.2.0
 pycparser==2.22
 PyYAML==6.0.2
+referencing==0.36.2
 resolvelib==1.0.1
+rpds-py==0.23.1
+ruamel.yaml==0.18.10
+subprocess-tee==0.4.2
+virtualenv==20.29.3
+wcmatch==10.0
+yamllint==1.36.2
+zipp==3.21.0
