--- a/roles/hello_world/tasks/main.yml
+++ b/roles/hello_world/tasks/main.yml
@@ -1,4 +1,8 @@
+---
 - name: Create Hello World file
   ansible.builtin.copy:
     content: "Hello World"
+    owner: "{{ app_user }}"
+    group: "{{ app_user }}"
+    mode: "0644"
     dest: "{{ hello_world_dest }}"
