fix: fix vault file syntax check

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,7 +6,7 @@ fact_caching = jsonfile
 fact_caching_connection = /tmp/facts_cache
 roles_path = roles
 remote_tmp = /tmp/
-vault_password_file=./.vault_pass
+# vault_password_file=./.vault_pass
 
 [ssh_connection]
 pipelining = True
