--- a/inventories/interdata.yml
+++ b/inventories/interdata.yml
@@ -21,6 +21,14 @@ all:
       3562
     app_base_dir: /home/ithapp
     hostname: "ithadev"
+    # Firewall configs
+    ufw_default_incoming_policy: deny
+    ufw_default_outgoing_policy: allow
+    ufw_rules:
+      - rule: allow
+        to_port: 22
+        protocol: tcp
+        comment: "Allow incoming connection on standard SSH port"
   docker_users:
     - "ithapp"
   hosts:
