--- a/composes/redis-sentinel/configs/redis/master.conf
+++ b/composes/redis-sentinel/configs/redis/master.conf
@@ -64,7 +64,7 @@ replica-lazy-flush no
 
 # Append-only file settings
 # Enable AOF persistence
-appendonly yes
+appendonly yes # NOTE:
 # AOF filename
 appendfilename "appendonly.aof"
 # AOF sync strategy (everysec, always, no)
